[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Scanf-s <calzone0404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
pydantic-settings = "^2.7.1"
sqlmodel = "^0.0.22"
mypy = "^1.15.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
